added a new view trigged by message table cell;  right before embedding the message VC into a navigation VC

--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -365,11 +365,31 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="messageTableView" destination="Ffs-IV-TQu" id="L8O-pC-Kj5"/>
+                        <segue destination="9qR-Tc-dIw" kind="show" identifier="showChatView" id="o49-eW-7n8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hE-VL-Q1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-235.5" y="840.5"/>
+            <point key="canvasLocation" x="-576.5" y="840.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Vz8-qo-gMs">
+            <objects>
+                <viewController id="9qR-Tc-dIw" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="b7M-OB-a9V"/>
+                        <viewControllerLayoutGuide type="bottom" id="n1A-0r-irz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="n8I-N4-Ft6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4gA-w1-JqN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-129.5" y="840.5"/>
         </scene>
         <!--班级主页-->
         <scene sceneID="ERh-FH-HZU">
